--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~13.2.0",
     "@types/geojson": "^7946.0.7",
     "@types/ol": "^6.5.3",
+    "echarts": "^5.3.0",
+    "ngx-echarts": "^8.0.1",
     "ol": "^6.4.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
