--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/geojson": "^7946.0.7",
     "@types/ol": "^6.5.3",
     "echarts": "^5.3.0",
+    "moment": "^2.29.1",
     "ngx-echarts": "^8.0.1",
     "ol": "^6.4.3",
     "rxjs": "~7.5.0",
