refactor: Absolute path for core folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "paths": {
+      "@core/*": ["./src/app/core/*"],
       "@shared/*": ["./src/app/shared/*"]
     },
     "forceConsistentCasingInFileNames": true,
